# http_server

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  Untitled-1.json  any.pfx  cert.pem  entrypoint.properties  key.pem  load_tester.py  openssl.conf  scratch.txt  session_clean.bat  vcpkg-configuration.json  vcpkg.json  x64-mixed.cmake
.devcontainer/: Dockerfile  devcontainer.json  update-alternatives-clang.sh
entrypoint/: CMakeLists.txt
entrypoint/controllers/: CMakeLists.txt
entrypoint/controllers/inc/: command_receiver.h  end_point_manager.h  job_list_manager.h  job_to_media_command_mapper.h  pipeline.h  pipeline_manager.h  rpc_manager.h
entrypoint/controllers/src/: command_receiver.cpp  end_point_manager.cpp  job_list_manager.cpp  job_to_media_command_mapper.cpp  pipeline.cpp  pipeline_manager.cpp  rpc_manager.cpp
entrypoint/datamodels/: CMakeLists.txt
entrypoint/datamodels/inc/: function_request_data.h  function_response_data.h  job.h  job_media_command_map.h  media_command.h  protobuf_helper.h  status.h
entrypoint/datamodels/interfaces/: job.proto  status.proto
entrypoint/datamodels/src/: function_response_data.cpp  job.cpp  job_media_command_map.cpp  media_command.cpp  status.cpp
entrypoint/http_server_async_helper/: CMakeLists.txt
entrypoint/http_server_async_helper/inc/: http_server.h  http_server_data_models.h  http_session.hpp  pch.h  pch_internal.h  server.hpp  server_certificate.h  websocket_session.hpp
entrypoint/http_server_async_helper/src/: http_server.cpp  http_server1.cpp  http_session.cpp  server.cpp  websocket_session.cpp
entrypoint/http_server_helper/: CMakeLists.txt
entrypoint/http_server_helper/inc/: file_request_handler.h  function_request_data.h  function_request_or_response_data.h  function_response_data.h  generic_http_request_handler_factory.h  http_server.h  method_not_supported_request_handler.h  not_found_request_handler.h  options_request_handler.h  poco_net_stoppable_http_request_handler.h  rpc_handler.h  rpc_manager.h  server_stopped_event.h  web_socket_page_request_handler.h  web_socket_request_handler.h
entrypoint/http_server_helper/src/: file_request_handler.cpp  generic_http_request_handler_factory.cpp  http_server.cpp  method_not_supported_request_handler.cpp  not_found_request_handler.cpp  options_request_handler.cpp  poco_net_stoppable_http_request_handler.cpp  rpc_handler.cpp  rpc_manager.cpp  server_stopped_event.cpp  web_socket_page_request_handler.cpp  web_socket_request_handler.cpp
entrypoint/rpc_handler/: CMakeLists.txt
entrypoint/rpc_handler/inc/: function_request_data.h  rpc_handler.h  rpc_manager.h
entrypoint/rpc_handler/src/: 1rpc_handler.cpp  function_request_data.cpp  function_request_or_response_data.cpp  function_response_data.cpp  rpc_handler.cpp  rpc_manager.cpp
entrypoint/src/: EntryPoint.cpp  entry_point.cpp
entrypoint/web_socket_send_receive_helper/: CMakeLists.txt
entrypoint/web_socket_send_receive_helper/inc/: web_socket_send_receive_helper.h
entrypoint/web_socket_send_receive_helper/src/: web_socket_send_receive_helper.cpp
pocowebsocket/: CMakeLists.txt
pocowebsocket/src/: client_socket.cpp  server_socket.cpp
processes/: CMakeLists.txt
processes/src/: process_exit_after.cpp  process_exit_properly.cpp  process_never_exit.cpp
resource_monitor/: CMakeLists.txt
resource_monitor/inc/: monitor.h
resource_monitor/src/: monitor.cpp  monitor_test.cpp
static_html/: index.html  index_173.html  index_196.html  index_1x1.html  index_2x2.html  index_4x4.html  index_m.html  ws.html
static_html/css/: matrix.css  matrix_1x1.css  matrix_2x2.css  matrix_4x4.css  matrix_nxn.css
static_html/css/core/: player.css
static_html/js/: hlsconfig.js  sources.js  sources_173.js  sources_196.js  sources_m.js
static_html/js/core/hls/: hlswrapper.js  hlswrapper_sourav_old.js
static_html/js/core/network/: netconfig.js
static_html/js/core/player/: player.js
tests/: .clang-tidy  CMakeLists.txt  test.cpp
utils/: CMakeLists.txt
utils/inc/: logging.h
utils/src/: logging.cpp
